# nef-gpt

./: .gitignore  LICENSE  README.md  cli.py  experiments.ipynb  main.py  pyproject.toml  trainer.py  tune.py
configs/: base.yaml
data/: __backup.py  dataset.py  loader.py  tokenization.py  tokenizer.py  transforms.py
models/: __init__.py  mlp_models.py
models/nano-gpt/: __init__.py
models/nano_gpt/: __init__.py  components.py
models/nef_gpt/: __init__.py
nef-gpt/: __init__.py
nef-gpt/models/nano-gpt/: __init__.py  components.py
nef_gpt/: __init__.py
utils/: __init__.py  hd_utils.py  metrics.py  sdf_meshing.py  torchmetrics_fid.py  visualization.py  visualization3d.py
