[project]
name = "nef-gpt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Luca Fanselau", email = "luca.fanselau@outlook.com"},
]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "numpy>=1.26.4",
    "lightning>=2.4.0",
    "ray[tune]>=2.34.0",
    "torchtyping>=0.1.5",
    "vector-quantize-pytorch>=1.15.6",
    "ipykernel>=6.29.5",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
