[project]
name = "nef-gpt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Luca Fanselau", email = "luca.fanselau@outlook.com" }]
dependencies = [
    "numpy>=1.26.4",
    "lightning>=2.4.0",
    "ray[tune]>=2.34.0",
    "torchtyping>=0.1.5",
    "vector-quantize-pytorch>=1.15.6",
    "ipykernel>=6.29.5",
    "einops>=0.8.0",
    "wandb>=0.17.7",
    "jsonargparse[signatures]>=4.32.0",
    "deepspeed>=0.14.5",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[project.optional-dependencies]
amd = [
    "torch @ https://repo.radeon.com/rocm/manylinux/rocm-rel-6.1.3/torch-2.1.2%2Brocm6.1.3-cp310-cp310-linux_x86_64.whl",
    "torchvision @ https://repo.radeon.com/rocm/manylinux/rocm-rel-6.1.3/torchvision-0.16.1%2Brocm6.1.3-cp310-cp310-linux_x86_64.whl",
    "pytorch-triton-rocm @ https://repo.radeon.com/rocm/manylinux/rocm-rel-6.1.3/pytorch_triton_rocm-2.1.0%2Brocm6.1.3.4d510c3a44-cp310-cp310-linux_x86_64.whl",
]
gpu = ["torch>=2.4.0", "torchvision>=0.19.0"]
